[gd_scene load_steps=4 format=3 uid="uid://bq46gsh8ddip6"]

[ext_resource type="Script" uid="uid://b3jl3ue4blsw8" path="res://scripts/power_up/power_ups/missile_power_up.gd" id="1_warha"]

[sub_resource type="SphereShape3D" id="SphereShape3D_warha"]
radius = 3.7122736

[sub_resource type="CylinderShape3D" id="CylinderShape3D_warha"]
radius = 0.3

[node name="MissilePowerUp" type="Node3D"]
script = ExtResource("1_warha")
_explosion_impulse = 50.0

[node name="Mesh" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0)
radius = 0.3
sides = 16
cone = true

[node name="TargetDetectionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.577394)
collision_layer = 0
collision_mask = 512

[node name="DetectionAreaCollisionShape" type="CollisionShape3D" parent="TargetDetectionArea"]
shape = SubResource("SphereShape3D_warha")

[node name="TargetHitArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="TargetHitCollisionShape" type="CollisionShape3D" parent="TargetHitArea"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_warha")

[connection signal="area_entered" from="TargetDetectionArea" to="." method="_on_target_detection_area_entered"]
[connection signal="area_entered" from="TargetHitArea" to="." method="_on_target_hit_area_entered"]
